--- a/security/src/main/resources/application.yml
+++ b/security/src/main/resources/application.yml
@@ -52,6 +52,19 @@ spring:
         #最小空闲数
         min-idle: 1
       shutdown-timeout: 100ms
+  cloud:
+    consul:
+      host: 47.103.37.69
+      port: 8500
+      enabled: true
+      discovery:
+        enabled: true
+        serviceName: security
+        port: ${server.port}
+        health-check-path: /actuator/health
+        health-check-interval: 10s
+        tags: security
+        prefer-ip-address: true
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.lhm.springcloud.security.entity
