security—jwt  使用redis 优化

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
         <module>security</module>
 
         <module>mybatisplusgenerator</module>
+        <module>geteway</module>
     </modules>
 
 </project>
