--- a/security/src/main/resources/application.yml
+++ b/security/src/main/resources/application.yml
@@ -75,9 +75,14 @@ security:
 logging:
   level:
     com.lhm.springcloud.security: DEBUG
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 #需要过滤的路径
 ignored:
   urls:
   - /actuator/**
   - /login/**
+  - /instances/**
